tests/compile-fail/integration__integration__image_sources__color_formats__bad_transcode_into.snap
---
source: tests/integration/image_sources.rs
expression: stderr
---
error: cannot transcode into unknown color format 8
  ┌─ <input>:8:17
  │
8 │     img_format: 8,
  │                 ^ unknown color format


